# itrace

./: .clang-format  .gitignore  CMakeLists.txt  README.md  itrace.py  main.py  pyproject.toml  setup.py
examples/echoserver/: Makefile  echoclient.cpp  echoserver.cpp
include/libitrace/: decode.hpp  record.hpp  subprocess.hpp  utils.hpp
itrace/: decode.cpp  itrace.cpp  record.cpp  record.hpp
itrace-cli/: decode.cpp  decode.hpp  export.cpp  export.hpp  itrace.cpp  record.cpp
itrace-tui/: main.cpp
scripts/: format.sh
src/libitrace/: decode.cpp  record.cpp  subprocess.cpp  utils.cpp
